
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_height="match_parent" android:layout_width="match_parent"
    app:theme="@style/AppTheme.Dark1">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_sign_up"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        tools:context="com.example.admin.finalproject.HomeActivity">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/fNewEventNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/fNewEventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_event_hint"
                android:textColor="@color/colorPrimaryLight"
                android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fNewEventDescLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/fNewEventDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/desc_event_hint"
                android:textColor="@color/colorPrimaryLight"
                android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fNewEventDateLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/fNewEventDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_event_hint"
                    android:textColor="@color/colorPrimaryLight"
                    android:clickable="true"
                    android:focusable="false"
                    android:onClick="showDate"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fNewEventHourLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/fNewEventHour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/time_event_hint"
                    android:textColor="@color/colorPrimaryLight"
                    android:clickable="true"
                    android:focusable="false"
                    android:onClick="showDate"/>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <com.google.android.gms.maps.MapView
            android:id="@+id/fNewEventMap"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <!--<Button-->
            <!--android:id="@+id/fNewEventBtn"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/text_add_btn"-->
            <!--style="@style/Button" />-->

    </LinearLayout>
        <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="4dp"
        app:srcCompat="@mipmap/ic_done_black" />
</FrameLayout>